--- a/styles.css
+++ b/styles.css
@@ -134,8 +134,8 @@ footer {
   color: #fff;
 } 
 html {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  -webkit-user-select: auto;
+  -moz-user-select: auto;
+  -ms-user-select: auto;
+  user-select: auto;
 }
